# RAGUdemyPoc

./: .gitignore  main.py  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataingestion_pdf.ipynb  3-dataingestion_docs.ipynb  4-dataingestion_csv.ipynb  5-dataingest_json.ipynb
